--- a/package.json
+++ b/package.json
@@ -9,16 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.3",
+    "@prisma/client": "^5.6.0",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/bcryptjs": "^2.4.6",
+    "axios": "^1.6.3",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.381.0",
+    "clsx": "^2.0.0",
+    "easymde": "^2.18.0",
+    "lucide-react": "^0.300.0",
     "next": "14.0.3",
-    "next-themes": "^0.3.0",
+    "next-auth": "^4.24.7",
+    "next-themes": "^0.2.1",
+    "prisma": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "react-hook-form": "^7.49.2",
+    "react-markdown": "^9.0.1",
+    "react-simplemde-editor": "^5.2.0",
+    "recharts": "^2.12.0",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
