--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,9 +3,11 @@ frontend:
   phases:
     preBuild:
       commands:
+        - echo Installing dependencies...
         - npm ci
     build:
       commands:
+        - echo Building the project...
         - npm run build
   artifacts:
     baseDirectory: .next
